links are fixed

--- a/mushroom_classification.ipynb
+++ b/mushroom_classification.ipynb
@@ -10,7 +10,7 @@
         "This is a quick project to test different machine learning models on a cleaned\n",
         "simple dataset. This [dataset](https://www.kaggle.com/datasets/prishasawhney/mushroom-dataset) consists of 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species). Each mushroom is identified as definitely edible or definitely poisonous. Based on this dataset we will try to predict a given mushroom is edible or not by using its features.\n",
         "\n",
-        "You can also access this notebook on my Github and Kaggle."
+        "You can also access this notebook from [Kaggle](https://www.kaggle.com/code/ufuktanriverdi/mushroom-classification)."
       ]
     },
     {
